<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="27dp"
        android:minHeight="27dp"
        android:contentDescription="@string/backarrow"
        android:layout_marginStart="19dp"
        android:background="@drawable/back_arrow"
        android:layout_marginTop="7dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/ForgotPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/forgot_password"
        android:layout_marginTop="272dp"
        android:textAppearance="@style/hi_"
        android:layout_alignStart="@+id/forgot_box"
        android:layout_alignEnd="@+id/forgot_box"
        android:minWidth="289dp"
        android:layout_marginStart="0dp"
        android:layout_centerHorizontal="true"
        android:minHeight="22dp"
        />

    <LinearLayout
        android:id="@+id/forgot_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_and_password_box"
        android:minWidth="360dp"
        android:minHeight="240dp"
        android:layout_below="@+id/ForgotPasswordTv"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="323dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/Dont_Worry_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_worry_it_happens_please_enter_the_email_address_associated_with_your_account"
        android:textAppearance="@style/don_t_worry"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="22dp"
        android:minWidth="329dp"
        android:minHeight="66dp"

        />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/emailForgotEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/email_bg"
        android:minWidth="348dp"
        android:minHeight="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textAppearance="@style/email"
        android:textColorHint="#434141"
        android:textColor="@color/black"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="348dp"
        android:minHeight="50dp"
        android:text="@string/submit"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/get_otp_btn_bg"
        android:textColor="@color/white"
        android:textAppearance="@style/continue_btn"
        android:textAlignment="center"
        android:padding="14dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/successTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignTop="@+id/forgot_box"
        android:text="@string/check_out_your_mailbox_you_will_receive_an_email_containing_link_where_you_can_reset_your_password"
        android:textAppearance="@style/don_t_worry"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="22dp"
        android:minWidth="329dp"
        android:minHeight="66dp"/>


</RelativeLayout>