<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleAuthActivity">

    <ImageButton
        android:id="@+id/backArrowSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="27dp"
        android:minHeight="27dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/back_arrow"
        android:layout_marginTop="9dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/hi_"
        android:minWidth="43dp"
        android:layout_alignParentTop="true"
        android:minHeight="25dp"
        />

    <LinearLayout
        android:id="@+id/email_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_and_password_box"
        android:minWidth="360dp"
        android:minHeight="612dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:minWidth="330dp"
            android:text="@string/looks_like_you_don_t_have_an_account_nlet_s_create_a_new_account"
            android:textAppearance="@style/looks_like_"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:background="@drawable/email_bg"
            android:minWidth="330dp"
            android:minHeight="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAppearance="@style/email"
            android:textColorHint="#434141"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/email_sign_up_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/email_bg"
            android:minWidth="330dp"
            android:minHeight="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="15dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAppearance="@style/email"
            android:textColorHint="#434141"
            android:textColor="@color/black"
            />



        <EditText
            android:id="@+id/password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/email_bg"
            android:minWidth="330dp"
            android:minHeight="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="15dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAppearance="@style/email"
            android:textColorHint="#434141"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:background="@drawable/email_bg"
            android:minWidth="330dp"
            android:minHeight="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="15dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAppearance="@style/email"
            android:textColorHint="#434141"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_selecting_agree_and_continue_below_n_i_agree_to_terms_of_service_and_n_privacy_policy"
            android:layout_marginStart="19dp"
            android:layout_marginTop="8dp"
            android:minWidth="330dp"
            android:minHeight="66dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppins"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/agree_and_continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="330dp"
            android:minHeight="50dp"
            android:text="@string/agree_and_continue"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/get_otp_btn_bg"
            android:textColor="@color/white"
            android:textAppearance="@style/continue_btn"
            android:textAlignment="center"
            android:padding="14dp"
            />






    </LinearLayout>



</RelativeLayout>