<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:contentDescription="@string/logo" />

        <ImageButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/camera_icon"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/camera_icon" />

        <androidx.cardview.widget.CardView
            android:id="@+id/slider_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/logo"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_corner_radius="15"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_placeholder="@color/grey_for_navbar"
                app:iss_error_image="@color/grey_for_navbar"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:iss_delay="0"
                app:iss_text_align="CENTER"
                tools:ignore="MissingConstrain"/>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/recommended_section_ll"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/slider_card"
            android:layout_height="wrap_content">


        <TextView
            android:id="@+id/recommended_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAlignment="textStart"
            style="@style/recommended"
            />

        <TextView
            android:id="@+id/see_more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:layout_weight="0.1"
            android:textAlignment="textEnd"
            style="@style/see_more_"

            />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_below="@id/recommended_section_ll"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</FrameLayout>