<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleAuthActivity">

      <TextView
          android:id="@+id/skip_to_main"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/skip"
          android:layout_marginTop="15dp"
          android:minWidth="40dp"
          android:gravity="center_horizontal|top"
          android:minHeight="22dp"
          android:layout_alignParentTop="true"
          android:textAppearance="@style/skip_"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="17dp"
          />

      <TextView
          android:id="@+id/hi"
          android:textAlignment="textStart"
          android:layout_alignStart="@+id/email_box"
          android:layout_alignEnd="@+id/email_box"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/hi"
          android:layout_centerHorizontal="true"
          android:layout_marginStart="0dp"
          android:layout_marginTop="140dp"
          android:textAppearance="@style/hi_"
          android:minWidth="43dp"
          android:layout_alignParentTop="true"
          android:minHeight="25dp"
          />

      <LinearLayout
          android:id="@+id/email_box"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/email_and_password_box"
          android:minWidth="360dp"
          android:minHeight="612dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="190dp"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          android:layout_marginBottom="21dp"
          android:orientation="vertical"
          >
            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:background="@drawable/email_bg"
                android:minWidth="330dp"
                android:minHeight="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="15dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textAppearance="@style/email"
                android:textColorHint="#434141"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/email_bg"
                android:minWidth="330dp"
                android:minHeight="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textAppearance="@style/email"
                android:textColorHint="#434141"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_for_email_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="330dp"
                android:minHeight="50dp"
                android:text="@string/continue_btn"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/get_otp_btn_bg"
                android:textColor="@color/white"
                android:textAppearance="@style/continue_btn"
                android:textAlignment="center"
                android:padding="14dp"
                />


            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAppearance="@style/or"
                android:gravity="center_horizontal|top"
                android:layout_marginStart="173dp"
                android:layout_marginEnd="172dp"
                android:minWidth="17dp"
                android:minHeight="25dp"
                android:layout_marginTop="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/facebook_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="330dp"
                android:minHeight="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/facebook_icon"
                android:background="@drawable/white_bg"
                android:drawablePadding="10dp"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/connect_with_facebook"
                android:textAppearance="@style/connect_with_facebook"
                android:textAlignment="center"
                android:gravity="center_horizontal|top"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="330dp"
                android:minHeight="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/google_icon"
                android:background="@drawable/white_bg"
                android:drawablePadding="10dp"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Connect with Google"
                android:textAppearance="@style/connect_with_facebook"
                android:textAlignment="center"
                android:gravity="center_horizontal|top"
                />

            <LinearLayout
                android:id="@+id/sign_up_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="0dp"
                android:minWidth="230dp"
                android:minHeight="25dp"
                android:textAlignment="textStart"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                  >
                  <TextView
                      android:id="@+id/dont_have_an_account"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Don’t have an account? "
                      android:textFontWeight="-10"
                      android:fontFamily="@font/poppins"
                      android:textSize="17sp"
                      />

                  <TextView
                      android:id="@+id/sign_up_tv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Sign Up"
                      android:textSize="17sp"
                      android:textStyle="normal"
                      android:fontFamily="@font/poppins"
                      android:textFontWeight="10000"
                      />

            </LinearLayout>

            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot your password?"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:textSize="17sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins"
                android:textFontWeight="10000"
                android:layout_marginBottom="20dp"
                />



      </LinearLayout>



</RelativeLayout>